# sonicland

./: CONTRIBUTING.md  COPYING  LICENSE  README.md  build-ssx.sh  meson.build  release.sh  wayland-scanner.m4  wayland-scanner.mk
.forgejo/workflows/: sync_upstream.yml
cursor/: convert_font.c  cursor-data.h  meson.build  os-compatibility.c  os-compatibility.h  wayland-cursor.c  wayland-cursor.h  xcursor.c  xcursor.h
doc/: meson.build
doc/doxygen/: gen-doxygen.py  mainpage.dox  meson.build
doc/doxygen/xml/: meson.build
doc/doxygen/xml/Client/: meson.build
doc/doxygen/xml/Server/: meson.build
doc/publican/: Author_Group.xml  Book_Info.xml  Client.xml  Foreword.xml  Server.xml  Wayland.ent  Wayland.xml  meson.build
doc/publican/xsl/: doxygen-to-publican.xsl  merge-mapcoords.xsl  protocol-interfaces-to-docbook.xsl  protocol-to-docbook.xsl
egl/: meson.build  wayland-egl-abi-check.c  wayland-egl-backend.h  wayland-egl-core.h  wayland-egl.c  wayland-egl.h
protocol/: tests.xml  wayland.dtd  wayland.xml
src/: connection.c  drm-hijack.c  event-loop.c  meson.build  scanner.c  ssx_accel.h  ssx_compat.c  ssx_compat.h  ssx_damage.h  ssx_io_uring.h  timespec-util.h  wayland-client-core.h  wayland-client.c  wayland-client.h  wayland-os.c  wayland-os.h  wayland-private.h  wayland-server-core.h  wayland-server-private.h  wayland-server.c  wayland-server.h  wayland-shm.c  wayland-util.c  wayland-util.h  wayland-version.h.in
tests/: array-test.c  client-test.c  compositor-introspection-test.c  connection-test.c  cpp-compile-test.cpp  display-test.c  enum-validator-test.c  event-loop-test.c  exec-fd-leak-checker.c  fixed-test.c  headers-protocol-core-test.c  headers-protocol-test.c  headers-test.c  interface-test.c  list-test.c  map-test.c  meson.build  message-test.c  newsignal-test.c  os-wrappers-test.c  protocol-logger-test.c  proxy-test.c  queue-test.c  resources-test.c  sanity-test.c  scanner-test-gen.sh  scanner-test.sh  signal-test.c  socket-test.c  test-compositor.c  test-compositor.h  test-helpers.c  test-runner.c  test-runner.h
