# * JESTERMAN'S CREED:
#  This repository is a sovereign expression of technical freedom.
#  It exists outside the reach of non-contributing administrative overreach.
#  The creator's intent is the absolute law of this tree.
#
#  PROJECT: sonicland (ssX Core)
#  CONTRIBUTORS: COLLIN BEYER, AZURITESHIFT
#  LICENSE: ssX Supplemental License (see LICENSE at project root)
#  COPYRIGHT (c) 2026 COLLIN BEYER ALL RIGHTS RESERVED

subdir('Client')
subdir('Server')
